# Lab-Gtk

./: README.md  iris.arff  meson.build  segment-test.arff  unj.gtk.com.json
data/: meson.build  unj.gtk.com.desktop.in  unj.gtk.com.gschema.xml  unj.gtk.com.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  data.vala  lab-gtk.gresource.xml  main.vala  meson.build  window.vala
src/model/: any.vala  content.vala  database.vala  document.vala  metadata.vala  type.vala
src/model/struct/: node.vala  nodes.vala
src/style/: style.css
src/ui/: grid.ui  window.ui  window2.ui
src/utils/: error.vala  ioutil.vala  util.vala
subprojects/: gee.wrap
